Portafolio casi terminado

--- a/index.html
+++ b/index.html
@@ -49,28 +49,148 @@
 
 </section>
 
-    <section class="acercademi">
+<section class="acercademi">
     <h2 class="acerca" >Acerca de mí</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum unde perferendis labore laboriosam eum sit maxime neque in, sapiente, sint laborum nam facilis nihil hic iusto facere delectus? Optio reiciendis in eaque, labore voluptatum dolorem ut. Qui, blanditiis numquam! Aliquid mollitia dolor fugiat rem tenetur sapiente reiciendis fuga tempore assumenda nisi perferendis necessitatibus magnam asperiores dignissimos esse, deserunt vero quasi ipsa! Repellendus ea voluptatum eum temporibus voluptate eligendi labore ratione commodi magnam, autem recusandae eos hic in, tenetur alias et iusto natus rerum quos repudiandae. Quidem aut aperiam laborum? Eligendi asperiores odio distinctio, magni reiciendis aut quibusdam illo ipsa tenetur.</p>
+     <p class="textoacerca">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum unde perferendis labore laboriosam eum sit maxime neque in, sapiente, sint laborum nam facilis nihil hic iusto facere delectus? Optio reiciendis in eaque, labore voluptatum dolorem ut. Qui, blanditiis numquam! Aliquid mollitia dolor fugiat rem tenetur sapiente reiciendis fuga tempore assumenda nisi perferendis necessitatibus magnam asperiores dignissimos esse, deserunt vero quasi ipsa! Repellendus ea voluptatum eum temporibus voluptate eligendi labore ratione commodi magnam, autem recusandae eos hic in, tenetur alias et iusto natus rerum quos repudiandae. Quidem aut aperiam laborum? Eligendi asperiores odio distinctio, magni reiciendis aut quibusdam illo ipsa tenetur.</p>
    <br>
    <br>
     <img class="uvm" src="./assets/Images/image 9.jpg" alt="">
-    <img class="academlo" src="./assets/Images/logo_academlo 5.png" alt="">
-</section>
     
-    <section class="Experiencia">
-    <h2>Experiencia</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum unde perferendis labore laboriosam eum sit maxime neque in, sapiente, sint laborum nam facilis nihil hic iusto facere delectus? Optio reiciendis in eaque, labore voluptatum dolorem ut. Qui, blanditiis numquam! Aliquid mollitia dolor fugiat rem tenetur sapiente reiciendis fuga tempore assumenda nisi perferendis necessitatibus magnam asperiores dignissimos esse, deserunt vero quasi ipsa! Repellendus ea voluptatum eum temporibus voluptate eligendi labore ratione commodi magnam, autem recusandae eos hic in, tenetur alias et iusto natus rerum quos repudiandae. Quidem aut aperiam laborum? Eligendi asperiores odio distinctio, magni reiciendis aut quibusdam illo ipsa tenetur.</p></section>
-    <section class="Mis Habilidades">
-        <h2>Mis habilidades</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum unde perferendis labore laboriosam eum sit maxime neque in, sapiente, sint laborum nam facilis nihil hic iusto facere delectus? Optio reiciendis in eaque, labore voluptatum dolorem ut. Qui, blanditiis numquam! Aliquid mollitia dolor fugiat rem tenetur sapiente reiciendis fuga tempore assumenda nisi perferendis necessitatibus magnam asperiores dignissimos esse, deserunt vero quasi ipsa! Repellendus ea voluptatum eum temporibus voluptate eligendi labore ratione commodi magnam, autem recusandae eos hic in, tenetur alias et iusto natus rerum quos repudiandae. Quidem aut aperiam laborum? Eligendi asperiores odio distinctio, magni reiciendis aut quibusdam illo ipsa tenetur.</p> </section>
-    <section class="Mi Portafolio">
-    <h2>Mi Portafolio</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum unde perferendis labore laboriosam eum sit maxime neque in, sapiente, sint laborum nam facilis nihil hic iusto facere delectus? Optio reiciendis in eaque, labore voluptatum dolorem ut. Qui, blanditiis numquam! Aliquid mollitia dolor fugiat rem tenetur sapiente reiciendis fuga tempore assumenda nisi perferendis necessitatibus magnam asperiores dignissimos esse, deserunt vero quasi ipsa! Repellendus ea voluptatum eum temporibus voluptate eligendi labore ratione commodi magnam, autem recusandae eos hic in, tenetur alias et iusto natus rerum quos repudiandae. Quidem aut aperiam laborum? Eligendi asperiores odio distinctio, magni reiciendis aut quibusdam illo ipsa tenetur.</p> </section>
+    <img class="academlo" src="./assets/Images/logo_academlo 5.png" alt="">
+<div class="div-uvm">
+    <p class="uvm2" >UVM</p>
+    <p class="dosmildiez">2010 - 2014</p>
+</div>
+<div class="div-academlo">
+    <p class="academia">Academlo</p>
+    <p class="dosmilveinte">2020 - 2022</p>
+</div>
+</section>
+    <br>
+    <br>
+    <br>
+<section class="Experiencia">
+
+    <h2 class="subtitulo2">Experiencia</h2>
+    <br>
+    <br>
+
+    <div class="amazon">
+    <img src="./assets/Images/ant-design_amazon-outlined.svg" alt="">
+
+    <div> <p>Amazon <br> UIDesigner <br>2015-2017</p></div>
+    <p> 2 años</p> 
+    </div>
+
+    <br>
+<div class="airbnb">
+    <img src="./assets/Images/cib_airbnb.svg" alt="">
+    <div> <p>Airbnb <br> Senior UX/UI <br> 2017-2018</p></div>
+    <p>1 año</p>
+</div>
+
+    <br> 
+
+    <div class="google">
+    <img class="fotogoogle" src="./assets/Images/akar-icons_google-fill.svg" alt="">
+    <div><p>Google <br> Product Designer <br> 2018-Actualidad</p></div>
+    <p>4 años</p>
+    </div>
+    <br>
+
+    <div class="lineaamarilla"><img src="./assets/Images/Group 35.svg" alt=""> </div>
+
+    </section>
+<br>
+<br>
+<br>
+<br>
+
+    <section class="mishabilidades">
+        <h2 class="subtitulo3">Mis habilidades</h2>
+        <br>
+        <br>
+   <div class="porcentajes">
+    <p class="porcentaje"> 95% <span class="habilidad">Mobile app design</span></p> 
+    <p class="porcentaje"> 70% <span class="habilidad">Motion Design</span></p> 
+    <p class="porcentaje"> 90% <span class="habilidad">Creación y mantenimiento de sistemas de diseño</span></p> 
+    <p class="porcentaje"> 90% <span class="habilidad">Gestión de proyectos</span></p>
+</div>
+</section> 
+<br>
+    <section class="miportafolio">
+    <h2 class="subtitulo4">Mi Portafolio</h2>
+    <br>
+    <br>
+    <br>
+
+    <div class="ecommerce">
+        <img class="imagen1"src="./assets/Images/image 9-1.jpg" alt="">
+    <p class="skincare">Ecommerce Skincare</p> </div>
+    <br>
+    <br>
+    <br>
+
+    <div class="app"> 
+        <img class="imagen2" src="./assets/Images/image 10.jpg" alt="">
+        <p class="training">Training at home app</p>
+
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="writer">
+        <img class="imagen3" src="./assets/Images/image 11.jpg" alt="">
+        <p class="personal">Personal writer</p>
+    </div>
+
+
+
+
+</section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <section class="Contacto">
-        <h2>Contacto</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum unde perferendis labore laboriosam eum sit maxime neque in, sapiente, sint laborum nam facilis nihil hic iusto facere delectus? Optio reiciendis in eaque, labore voluptatum dolorem ut. Qui, blanditiis numquam! Aliquid mollitia dolor fugiat rem tenetur sapiente reiciendis fuga tempore assumenda nisi perferendis necessitatibus magnam asperiores dignissimos esse, deserunt vero quasi ipsa! Repellendus ea voluptatum eum temporibus voluptate eligendi labore ratione commodi magnam, autem recusandae eos hic in, tenetur alias et iusto natus rerum quos repudiandae. Quidem aut aperiam laborum? Eligendi asperiores odio distinctio, magni reiciendis aut quibusdam illo ipsa tenetur.</p></section>
+        <h2 class="subtitulo4">Contacto</h2>
+        <br>
+        <br>
+        <br>
+
+    <div class="datos" > <img class="telefono" src="./assets/Images/phone 3.svg" alt=""> 
+    <p class="numero">Número celular</p>
+    <br>
+    <p class="num">09856985698</p>
+    </div>
+
+    <div class="correo"> <img class="email" src="./assets/Images/mail 3.svg" alt="">
+    <p class="numero">Email</p>
+    <br>
+    <p class="num">example@correo.com</p>
+    </div>
+
+
+
+
+</section>
 
 </main>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer> </footer>
 </body>
 </html>
+<!-- Menu hamburguesa, footer, mobile, medidas-->
