--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/accc33d0a0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
+
+    <img class="cuadrado-fondo1" src="./assets/Images/Rectangle 33-1.svg" alt="">
+
 <header class="header">
 <nav class="nav">
-    <div>Logo</div>
+    <div></div>
 <!--<img class="cuadrado" src="./assets/Images/Rectangle 33-1.svg" > -->
     <ul class="ul">
         <li class="li"><a href="" class="a">Home</a>
@@ -30,10 +35,15 @@
         </li>
         <li class="li"><a href="" class="a">Contacto</a>
         </li>
+       
     </ul>
 
+<button class="boton-hamburguesa">
+    <i class="fa-solid fa-bars"></i>
+</button>
 </nav> 
 </header>
+
 <main class="main"> 
     <section class="Home">
     <h1 class="Nombre">Lina María J</h1>
@@ -107,6 +117,8 @@
 <br>
 
     <section class="mishabilidades">
+
+        <img class="rectangulo-alargado" src="./assets/Images/Rectangle 33.svg" alt="">
         <h2 class="subtitulo3">Mis habilidades</h2>
         <br>
         <br>
@@ -185,12 +197,12 @@
 </section>
 
 </main>
-<br>
-<br>
-<br>
-<br>
-<br>
-<footer> </footer>
+
+<footer class="footer"> 
+<h3>Lina Maria Jacome</h3>
+<p>Creditos: Academlo 2022</p>
+
+</footer>
 </body>
 </html>
 <!-- Menu hamburguesa, footer, mobile, medidas-->
