--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <img class="cuadrado-fondo1" src="./assets/Images/Rectangle 33-1.svg" alt="">
+<!-- <img class="cuadrado-fondo1" src="./assets/Images/Rectangle 33-1.svg" alt="">-->
 
 <header class="header">
 <nav class="nav">
@@ -118,7 +118,7 @@
 
     <section class="mishabilidades">
 
-        <img class="rectangulo-alargado" src="./assets/Images/Rectangle 33.svg" alt="">
+      <!-- <img class="rectangulo-alargado" src="./assets/Images/Rectangle 33.svg" alt="">--> 
         <h2 class="subtitulo3">Mis habilidades</h2>
         <br>
         <br>
