--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="mishabilidades">
 
       <!-- <img class="rectangulo-alargado" src="./assets/Images/Rectangle 33.svg" alt="">--> 
-        <h2 class="subtitulo3">Mis habilidades</h2>
+        <h2 class="subtitulo3">Mis habilidade</h2>
         <br>
         <br>
    <div class="porcentajes">
